...
  final FirebaseFirestore _db = FirebaseFirestore.instance;

  Future<void> seedDatabase() async {
    final movies = [
      Movie(
        id: '1',
        title: 'Inception',
        genre: 'Action / Sci-Fi',
        duration: '2h 28min',
        rating: 8.8,
        posterUrl: 'assets/images/nowshowing/nowshowing/incepton.jpg',
        trailerImageUrl: 'assets/images/tailors/tailors/inception.jpg',
        youtubeVideoId: 'YoHD9XEInc0',
...
